Fix background overflowing, update font sizes

--- a/style.css
+++ b/style.css
@@ -119,6 +119,10 @@ body {
     margin-left: 3rem;
     margin-right: 3rem;
   }
+
+  .forecast-line h4 {
+    font-size: 0.9rem;
+  }
 }
 
 #left-container {
@@ -174,6 +178,8 @@ body {
 
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
 }
 
 #forecast-details-container {
@@ -224,8 +230,18 @@ h1 {
   text-align: center;
 }
 
-h4 {
+.current-line h4 {
   text-align: center;
+  font-weight: 500;
+}
+
+.forecast-line h3 {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+#condition {
+  font-size: 1.3rem;
 }
 
 #place-form {
@@ -284,7 +300,7 @@ button:active {
 #background-overlay {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   z-index: -1;
 }
 
